--- a/03-room-homepage/package.json
+++ b/03-room-homepage/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.3.28",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.10"
